chore: revise the JEP 500 article